# SYMconnect

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  README.md  SECURITY.md  SYMconnect.spec  fix_icon.py  pyproject.toml  requirements-build.txt  requirements-server.txt  requirements.txt  test_clip.py  test_set_clip.py
.github/workflows/: quality.yml  server-image.yml  windows-release.yml
build-config/: server_url.txt.example
installer/: SYMconnect.iss
scripts/: build_windows.ps1  run_host.ps1  run_local_demo.ps1  run_server.ps1  server_url.txt  smoke_relay.py
scripts/symconnect/: __init__.py  agent.py  desktop_app.py  input_control.py  protocol.py  server.py
scripts/symconnect/static/: app.js  index.html  styles.css
symconnect/: __init__.py  agent.py  desktop_app.py  input_control.py  protocol.py  screen_capture.py  server.py  updater.py
symconnect/static/: app.js  index.html  styles.css
tests/: test_core.py  test_updater.py
