[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "symconnect"
version = "0.2.0"
description = "Consent-first Windows remote support application and relay."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.111,<1",
    "uvicorn[standard]>=0.30,<1",
    "websockets>=12,<16",
    "mss>=9,<11",
    "pillow>=10,<13",
    "pynput>=1.7,<2",
    "rich>=13,<15",
    "pywebview>=6,<7",
    "pythonnet>=3,<4; sys_platform == 'win32'",
]

[project.optional-dependencies]
build = [
    "pyinstaller>=6.21,<7",
    "pytest>=8,<9",
]

[project.scripts]
symconnect-server = "symconnect.server:main"
symconnect-host = "symconnect.agent:main"
symconnect-desktop = "symconnect.desktop_app:main"

[tool.setuptools.packages.find]
include = ["symconnect*"]

[tool.setuptools.package-data]
symconnect = ["static/*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
